<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Core -->
    <string name="app_name">Xebia Essentials</string>
    <string name="bitly_url_prefix">"http://bit.ly/"</string>
    <string name="cards_url_prefix">essentials.xebia.com/</string> <!-- without http:// -->
    <string name="github_url">https://github.com/Nilhcem/xebia-essentials-android</string>

    <!-- Explicitly tell OrmLite the name of our DatabaseHelper class -->
    <string name="open_helper_classname" tools:ignore="UnusedResources">com.nilhcem.xebia.essentials.core.DatabaseHelper</string>

    <!-- Splash screen -->
    <string name="splash_loading">Loading…</string>
    <string name="splash_error">Error, couldn\'t import XML data: %s</string>

    <!-- Main menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_see_card">See card</string>
    <string name="menu_see_details">See details</string>
    <string name="menu_share">Share</string>

    <!-- Settings -->
    <string name="settings_cat_general">General</string>
    <string name="settings_cat_info">More information</string>
    <string name="settings_cards_animation">Cards flip animation</string>
    <string name="settings_xebia">About Xebia</string>
    <string name="settings_cards">About the cards</string>
    <string name="settings_licenses">Licenses</string>
    <string name="settings_github">Fork me on GitHub</string>

    <!-- Cards list -->
    <string name="cards_list_all">All categories</string>

    <!-- Cards flip -->
    <string name="cards_flip_qrcode_description">QR code</string>

    <!-- Intent (card scanner - search) -->
    <string name="intent_no_card_found">No card found</string>

    <!-- Menu drawer -->
    <string name="drawer_categories">CATEGORIES</string>
    <string name="drawer_other">OTHER</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_scan_card">Scan card</string>

    <!-- Search -->
    <string name="search_hint">Search card(s)</string>
    <string name="search_label">Search card(s)</string>

    <!-- About -->
    <string name="about_xebia_title">About Xebia</string>
    <string name="about_xebia_content"><![CDATA[<p>Xebia is a specialist in Agile, Java software development and enterprise architecture. Craftsmanship, the Mission of striving for a position of authority in our fields of expertise and our company values - People First, Sharing Knowledge, Quality without Compromise and Customer Intimacy - is what makes us tick.</p><p>Xebia was founded over a decade ago and has to date grown into a company of more than 250 employees, over 5 different countries - the Netherlands, France, India, Sweden, and the US - and a separate product company for automated deployment, XebiaLabs.</p><p>The secret of Xebia\'s success lies in the dedicated, vigorous, smart and enthusiastic people that commit themselves to the company and its customers. These craftsman and -women eagerly share their knowledge and work towards a common goal: software development done right.<br />Xebia commits itself to support their ambitions in an inspiring working environment where there is more than enough room for personal development.</p>]]></string>
    <string name="about_cards_title">Good software does not come about just like that; by mere coincidence…</string>
    <string name="about_cards_content"><![CDATA[<p>Inside a streamlined and well-executed software development process, there are many patterns for success. Some of them extend well beyond what is traditionally considered to be the realm of the software developer.</p><p>Inside our organization, many of these patterns were applied either consciously or subconsciously.</p>We felt the need to bring these patterns forward from under lock and key into the clear light of day for everyone\'s awareness. After months of gathering, slicing, dicing and eventual distilling with the team, we arrived at what we consider to be the \'<b>Essentials</b>\'.</p><p>In many cases it involves ideas, or the expression of those ideas, for which we cannot take credit ourselves. In those cases, we have strived to grant credit to the originators, being fully aware that greatness can only be achieved by standing on the shoulders of giants.</p><p>We are not going to explain how you should put this deck to good use. As <em>Einstein</em> said, <em>\"imagination is more important than knowledge\"</em>, and thus we encourage you to rely on your imagination. At the very least, these cards are a promise for a conversation. And these conversations are a breeding ground for new ideas.</p><p>We are convinced, it is many of these ideas that make our people into the software craftsmen they are.</p><p>If you have any questions, remarks or suggestions, feel free to send an email to <a href=\"mailto:essentials@xebia.com\">essentials@xebia.com</a></p>]]></string>

</resources>
