<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:key="settings_cat_other"
        android:title="@string/settings_cat_info" >

        <!-- About Xebia -->
        <Preference
            android:icon="@drawable/group"
            android:key="xebia"
            android:title="@string/settings_xebia" />

        <!-- About the cards -->
        <Preference
            android:icon="@drawable/shoebox"
            android:key="cards"
            android:title="@string/settings_cards" />

        <!-- Licenses -->
        <Preference
            android:icon="@drawable/notepad"
            android:key="licenses"
            android:title="@string/settings_licenses" />

        <!-- GitHub -->
        <Preference
            android:icon="@drawable/wrench"
            android:key="github"
            android:title="@string/settings_github" />
    </PreferenceCategory>
</PreferenceScreen>
