<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- See card -->
    <item android:id="@+id/menu_see_card"
          android:title="@string/menu_see_card"
          android:visible="false"
          android:icon="@drawable/ic_card"
          android:showAsAction="ifRoom|withText" />

    <!-- See details -->
    <item android:id="@+id/menu_see_details"
          android:title="@string/menu_see_details"
          android:visible="false"
          android:icon="@drawable/ic_info"
          android:showAsAction="ifRoom|withText" />

    <!-- Share -->
    <item
        android:id="@+id/menu_share"
        android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="ifRoom"
        android:title="@string/menu_share" />

</menu>
